# polyglot-coach

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  REFERENCES.md  docker-compose.yml  package.json  pyproject.toml  run.sh
apps/api/: README.md  pyproject.toml
apps/api/src/polyglot_coach_api/: __init__.py  __main__.py  main.py
apps/api/src/polyglot_coach_api/data/: __init__.py  loader.py
apps/api/src/polyglot_coach_api/routers/: analytics.py  conversation.py  curriculum.py  dictionary.py  grammar.py  learner.py  locale.py  review.py  tutor.py
apps/api/src/polyglot_coach_api/services/: llm.py  prompts.py  stt.py  tts.py
apps/desktop/: README.md
apps/web/: README.md  index.html
curriculum/common/: README.md
curriculum/de/: manifest.yaml
curriculum/es/: manifest.yaml
curriculum/fr/: manifest.yaml
curriculum/french/: README.md
curriculum/german/: README.md
curriculum/japanese/: README.md
curriculum/spanish/: README.md  manifest.yaml
datasets/conversations/: README.md
datasets/examples/: README.md
datasets/grammar/: README.md
datasets/locales/: README.md
datasets/vocabulary/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/curriculum/: README.md
k8s/: argocd-application.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  registry-secret.yaml  service.yaml
mcp/analytics/: README.md  pyproject.toml
mcp/analytics/src/analytics/: __init__.py  __main__.py  server.py
mcp/review/: README.md  pyproject.toml
mcp/review/src/review/: __init__.py  __main__.py  server.py
mcp/shared/: pyproject.toml
mcp/shared/src/polyglot_coach_shared/: __init__.py  database.py  models.py
tests/: README.md  conftest.py  test_analytics.py  test_conversation.py  test_curriculum.py  test_dictionary.py  test_grammar.py  test_learner_memory.py  test_locale.py  test_review.py  test_shared.py
tools/: generate-curriculum.py
(+56 files in other folders)
