[project]
name = "polyglot-coach-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "polyglot-coach-shared>=0.1.0",
    "polyglot-coach-learner-memory>=0.1.0",
    "polyglot-coach-curriculum>=0.1.0",
    "polyglot-coach-dictionary>=0.1.0",
    "polyglot-coach-grammar>=0.1.0",
    "polyglot-coach-locale>=0.1.0",
    "polyglot-coach-conversation>=0.1.0",
    "polyglot-coach-review>=0.1.0",
    "polyglot-coach-analytics>=0.1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglot_coach_api"]

[tool.ruff]
line-length = 100
